# api-recorder

./: .gitignore  Makefile.am  Makefile.in  README.md  configure  configure.ac  dummyapi.go  dummyapi.yml  go.mod  go.sum
model/hello/: hellomodel.go
server/: server.go
server/config/: config.go.in
server/controller/dummy/: dummycont.go
server/controller/hello/: hellocont.go
server/daemon/: daemon.go
